* Fixed: floating texts to flicker less in irregular resolution. :( * Fixed: floating texts use text-shadow if possible (and fallback to 4xElements simulation if Android 2.x or css is not supported).

--- a/trunk/MobileClient/www/Assets/Render/Placeables.css
+++ b/trunk/MobileClient/www/Assets/Render/Placeables.css
@@ -23,56 +23,21 @@
 	left: 26px;
 }
 
+/* HACK: Scaling the text fixes outline issues (flickering) on moving texts (floating), due to dpr scaling. */
+.statistics_text_container
+{
+	-webkit-transform: scale(0.8);
+	-moz-transform: scale(0.8);
+	-ms-transform: scale(0.8);
+	-o-transform: scale(0.8);
+	transform: scale(0.8);
+}
+
 .statistics_text
 {
-	font-size: 14px;
+	font-size: 24px;
 	font-family: Arial;
 	font-weight: bold;
 	
-	/* webkit stroke sux! */
-	/* -webkit-text-stroke: 0.6px black; */
-	
-	/* Source: https://css-tricks.com/adding-stroke-to-web-text/ */
-	/* text-shadow:
-   -1px -1px 0 #000,
-	1px -1px 0 #000,
-	-1px 1px 0 #000,
-	 1px 1px 0 #000;
-
-	Using real text spans to fake the shadow, for backward compatibility (old androids).
-	*/
 	z-index: 100;
-}
-
-.text_outline
-{
-	color: black;
-	position: absolute;
-	z-index: -100;
-	text-align: left;
-	white-space: nowrap;
-}
-
-.text_outline.left_top
-{
-	top:  -1px;
-	left: -1px;
-}
-
-.text_outline.right_top
-{
-	top: -1px;
-	left: 1px;
-}
-
-.text_outline.right_bottom
-{
-	top:  1px;
-	left: 1px;
-}
-
-.text_outline.left_bottom
-{
-	top:   1px;
-	left: -1px;
 }
